# cargo-override

./: .envrc.recommended  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: nix.yml  release-plz.yml  rust.yml
src/: cli.rs  context.rs  git.rs  lib.rs  main.rs  metadata.rs  registry.rs  toml.rs
tests/: checksum.rs  cli.rs  manifest.rs  tests.rs
tests/all/: cli.rs  git.rs  main.rs  manifest.rs
tests/fixture/: basic.toml  missing_dependencies_section.toml  zero_dependencies.toml
tests/fixture/patch/: cratesio.toml  cratesio_nested.toml
tests/snapshots/: tests__patch_exists.snap  tests__patch_exists.snap.new
