[package]
name = "cargo-override"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Work-in-progress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Used to introduce TDD style tests, that are known to fail now, without breaking CI.
#
# These tests are marked with `#[cfg_attr(not(feature = "failing_tests"), should_panic)]`.
# Once the bugs are fixed, and these tests start passing, those attributes need to be
# removed.
#
# You can run these special tests now with `cargo test --features failing_tests`
failing_tests = []

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.4.4", features = ["derive"] }
toml_edit = "0.22.9"
cargo_metadata = "0.18"

[dev-dependencies]
fake = "2.9.2"
googletest = "0.11.0"
insta = { version = "1.38.0", features = ["toml"] }
tempfile = "3.10.1"
test-case = "3.3.1"

# Faster snapshotting https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
