[package]
name = "cargo-override"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = """
Quickly override dependencies using the `[patch]` section of `Cargo.toml`s.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Used to introduce TDD style tests, that are known to fail now, without breaking CI.
#
# These tests are marked with `#[cfg_attr(not(feature = "failing_tests"), should_panic)]`.
# Once the bugs are fixed, and these tests start passing, those attributes need to be
# removed.
#
# You can run these special tests now with `cargo test --features failing_tests`
failing_tests = []

[dependencies]
anyhow = "1.0.81"
camino = "1.1.9"
cargo = "0.81.0"
cargo_metadata = "0.18"
cargo-util-schemas = "0.4.0"
clap = { version = "4.4.4", features = ["derive"] }
fs-err = "2.11.0"
home = "0.5.9"
pathdiff = "0.2.1"
semver = "1.0.23"
serde = { version = "1.0.206", features = ["derive"] }
toml_edit = "0.22.9"
url = "2.5.2"
winnow = "0.6.18"

[dev-dependencies]
assert_cmd = "2.0.16"
fake = "2.9.2"
googletest = "0.11.0"
hex = "0.4.3"
insta = { version = "1.38.0", features = ["filters", "toml"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
strip-ansi-escapes = "0.2.0"
tempfile = "3.12.0"
test-case = "3.3.1"

# Faster snapshotting https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
